--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
-  padding: 0;
+  margin    : 0;
+  padding   : 0;
   box-sizing: content-box;
 }
 
@@ -9,16 +9,16 @@ html {
 }
 
 body {
-  overflow-x: hidden;
-  color: #222;
-  font-family: 'Montserrat', sans-serif;
-  padding: 0;
-  margin: 0;
+  overflow-x      : hidden;
+  color           : #222;
+  font-family     : 'Montserrat', sans-serif;
+  padding         : 0;
+  margin          : 0;
   background-color: white;
 }
 
 button:focus {
-  outline: none;
+  outline   : none;
   box-shadow: 0 0 0 5px rgb(12, 52, 98);
 }
 
@@ -31,30 +31,30 @@ ul {
 }
 
 hr {
-  width: 33%;
-  height: 2px;
+  width           : 33%;
+  height          : 2px;
   background-color: #2196f3;
-  border: 0;
-  text-align: center;
-  margin: 20px auto;
-  clear: both;
+  border          : 0;
+  text-align      : center;
+  margin          : 20px auto;
+  clear           : both;
 }
 
 .home-link {
-  text-decoration: none;
-  transform: translateY(-10px) translateX(-12px);
-  color: inherit;
-  background-image: url('images/logo-menu.png');
-  background-repeat: no-repeat;
+  text-decoration    : none;
+  transform          : translateY(-10px) translateX(-12px);
+  color              : inherit;
+  background-image   : url('images/logo-menu.png');
+  background-repeat  : no-repeat;
   background-position: left;
-  background-size: contain;
-  width: 10%;
-  height: 80px;
+  background-size    : contain;
+  width              : 10%;
+  height             : 80px;
 }
 
 .intro-text {
-  color: black;
-  font-size: 2em;
+  color     : black;
+  font-size : 2em;
   text-align: center;
 }
 
@@ -84,47 +84,47 @@ hr {
 
 .main-nav {
   background-color: #fff;
-  padding-bottom: 0;
-  padding-right: 0;
-  position: relative;
-  z-index: 999;
+  padding-bottom  : 0;
+  padding-right   : 0;
+  position        : relative;
+  z-index         : 999;
 }
 
 .stripe {
-  min-height: 4.85em;
-  transform: translateY(-0.65em);
-  border-top-left-radius: 0;
-  padding-right: 170px;
+  min-height               : 4.85em;
+  transform                : translateY(-0.65em);
+  border-top-left-radius   : 0;
+  padding-right            : 170px;
   border-bottom-left-radius: 15px;
 }
 
 .stripe::after {
-  content: ' ';
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background: inherit;
-  border-radius: inherit;
+  content         : ' ';
+  position        : absolute;
+  display         : block;
+  width           : 100%;
+  height          : 100%;
+  top             : 0;
+  left            : 0;
+  z-index         : -1;
+  background      : inherit;
+  border-radius   : inherit;
   transform-origin: bottom right;
-  transform: skew(10deg, 0deg);
+  transform       : skew(10deg, 0deg);
 }
 
 .main-nav-li {
-  font-size: 1.25em;
-  text-align: right;
+  font-size      : 1.25em;
+  text-align     : right;
   list-style-type: none;
-  display: inline;
-  padding: 0;
-  color: white;
-  transition: all ease-in 0.12s;
+  display        : inline;
+  padding        : 0;
+  color          : white;
+  transition     : all ease-in 0.12s;
 }
 
 .main-nav-li:not(:first-child)::before {
-  color: white;
+  color  : white;
   content: ' | ';
 }
 
@@ -134,7 +134,7 @@ hr {
 
 .main-nav-li a {
   display: inline-block;
-  color: inherit;
+  color  : inherit;
 }
 
 .main-nav-li a:hover {
@@ -142,35 +142,35 @@ hr {
 }
 
 .make-appointment {
-  transform: translateY(-0.1em);
-  height: 4.55em;
-  width: 180px;
+  transform                : translateY(-0.1em);
+  height                   : 4.55em;
+  width                    : 180px;
   border-bottom-left-radius: 15px;
-  position: absolute;
-  top: 0;
-  right: 0;
+  position                 : absolute;
+  top                      : 0;
+  right                    : 0;
 }
 
 .make-appointment::after {
-  content: ' ';
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  background: inherit;
-  border-radius: inherit;
+  content         : ' ';
+  position        : absolute;
+  display         : block;
+  width           : 100%;
+  height          : 100%;
+  top             : 0;
+  left            : 0;
+  z-index         : -1;
+  background      : inherit;
+  border-radius   : inherit;
   transform-origin: bottom right;
-  transform: skew(10deg, 0deg);
+  transform       : skew(10deg, 0deg);
 }
 
 .make-appointment p {
   font-size: 1.2em;
-  position: absolute;
-  bottom: -0.8em;
-  right: 1em;
+  position : absolute;
+  bottom   : -0.8em;
+  right    : 1em;
 }
 
 /* #secondaryNav {
@@ -179,28 +179,28 @@ hr {
 } */
 
 .navbar-supported-content {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: row;
+  width          : 100%;
+  display        : -webkit-box;
+  display        : -ms-flexbox;
+  display        : flex;
+  flex-direction : row;
   justify-content: space-evenly;
 }
 
 .nav-item {
   justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 0.2em 0.5em 0;
-  transition: all 0.25s;
-  border: 1px solid transparent;
-  border-radius: 0.5em;
-  width: 8rem;
+  align-items    : center;
+  text-align     : center;
+  padding        : 0.2em 0.5em 0;
+  transition     : all 0.25s;
+  border         : 1px solid transparent;
+  border-radius  : 0.5em;
+  width          : 8rem;
 }
 
 .nav-item:hover {
-  cursor: pointer;
-  box-shadow: 0 0 15px grey;
+  cursor          : pointer;
+  box-shadow      : 0 0 15px grey;
   background-color: white;
 }
 
@@ -210,62 +210,62 @@ hr {
 
 .nav-item a {
   text-decoration: none;
-  color: inherit;
+  color          : inherit;
 }
 
 .specialty-name {
-  border-top: 1px solid cadetblue;
+  border-top   : 1px solid cadetblue;
   border-bottom: 1px solid cadetblue;
-  background: rgba(139, 199, 234, 0.3);
-  font-weight: bold;
+  background   : rgba(139, 199, 234, 0.3);
+  font-weight  : bold;
 }
 
 .specialty-doctor::before {
-  content: '· ';
+  content     : '· ';
   padding-left: 1em;
 }
 
 .body-wrapper {
   position: relative;
-  height: 100%;
-  z-index: 9;
+  height  : 100%;
+  z-index : 9;
 }
 
 .collab-cliniques {
-  position: absolute;
-  bottom: 0;
-  right: 1em;
-  width: 18em;
-  border-top-left-radius: 15px;
+  position               : absolute;
+  bottom                 : 0;
+  right                  : 1em;
+  width                  : 18em;
+  border-top-left-radius : 15px;
   border-top-right-radius: 15px;
-  transition: all ease-in-out 0.5s;
-  z-index: 9;
-  text-align: center;
+  transition             : all ease-in-out 0.5s;
+  z-index                : 9;
+  text-align             : center;
 }
 
 .collab-cliniques-title {
-  border-top-left-radius: inherit;
+  border-top-left-radius : inherit;
   border-top-right-radius: inherit;
-  height: 2em;
-  font-size: 1.3em;
-  padding-top: 1em;
+  height                 : 2em;
+  font-size              : 1.3em;
+  padding-top            : 1em;
 }
 
 .collab-cliniques-separator {
-  width: 100%;
-  padding: 0;
-  margin: 0;
+  width           : 100%;
+  padding         : 0;
+  margin          : 0;
   background-color: white;
 }
 
 .collab-cliniques-images {
-  position: relative;
-  bottom: 0;
-  height: 0;
+  position         : relative;
+  bottom           : 0;
+  height           : 0;
   -webkit-transform: scaleY(0);
-  transform: scaleY(0);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out, transform 0s ease-in-out 0.3s, height 0.3s ease-in-out 0.3s;
+  transform        : scaleY(0);
+  opacity          : 0;
+  transition       : opacity 0.3s ease-in-out, transform 0s ease-in-out 0.3s, height 0.3s ease-in-out 0.3s;
 }
 
 .collab-cliniques-images img {
@@ -273,11 +273,11 @@ hr {
 }
 
 .collab-cliniques:hover .collab-cliniques-images {
-  height: 15.7em;
+  height           : 15.7em;
   -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-  opacity: 1;
-  transition: height 0.3s ease-in-out, transform 0s ease-in-out, opacity 0.3s ease-in-out 0.3s;
+  transform        : scaleY(1);
+  opacity          : 1;
+  transition       : height 0.3s ease-in-out, transform 0s ease-in-out, opacity 0.3s ease-in-out 0.3s;
 }
 
 .collab-cliniques-md {
@@ -285,7 +285,7 @@ hr {
 }
 
 .page-container {
-  position: relative;
+  position  : relative;
   min-height: 100vh;
 }
 
@@ -295,14 +295,14 @@ hr {
 
 footer {
   position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 12rem;
+  bottom  : 0;
+  width   : 100%;
+  height  : 12rem;
 }
 
 .footer-flex {
-  display: flex;
-  flex-flow: row nowrap;
+  display        : flex;
+  flex-flow      : row nowrap;
   justify-content: flex-end;
 }
 
@@ -312,48 +312,46 @@ footer {
 
 .copyright {
   text-align: center;
-  color: white;
+  color     : white;
 }
 
 /* Styles el-centre.html */
 .big-margin-x {
-  margin-left: 20em;
+  margin-left : 20em;
   margin-right: 20em;
 }
 
 .big-margin-y {
-  margin-top: 10em;
+  margin-top   : 10em;
   margin-bottom: 10em;
 }
 
 .section-grid {
   /* grid */
-  display: grid;
+  display              : grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-template-areas:
-    'title image'
-    'text image';
+  grid-template-rows   : 1fr 1fr;
+  grid-template-areas  : 'title image' 'text image';
 }
 
 .section-title {
   /* grid */
-  grid-area: title;
+  grid-area    : title;
   /* looks */
-  color: #1f9bde;
-  font-size: 5em;
-  line-height: 1.2em;
+  color        : #1f9bde;
+  font-size    : 5em;
+  line-height  : 1.2em;
   border-bottom: 1px solid #1f9bde;
 }
 
 .section-text {
   /* grid */
-  grid-area: text;
+  grid-area    : text;
   /* looks */
-  font-size: 1.2em;
+  font-size    : 1.2em;
   padding-right: 0.8em;
-  padding-top: 0.5em;
-  text-align: justify;
+  padding-top  : 0.5em;
+  text-align   : justify;
 }
 
 .section-image {
@@ -372,22 +370,22 @@ footer {
 
 .exterior {
   background-image: url('images/elCentre/exterior.jpg');
-  display: block;
-  width: 100%;
+  display         : block;
+  width           : 100%;
 }
 
 .img-hover-zoom-container {
-  height: 350px;
+  height  : 350px;
   overflow: hidden;
 }
 
 .img-hover-zoom-container div {
-  width: inherit;
-  height: inherit;
+  width              : inherit;
+  height             : inherit;
   background-position: center;
-  background-size: cover;
-  transition: all 0.5s ease;
-  transform: scale(1.2);
+  background-size    : cover;
+  transition         : all 0.5s ease;
+  transform          : scale(1.2);
 }
 
 .img-hover-zoom-container:focus div,
@@ -396,6 +394,17 @@ footer {
 }
 
 /* END Styles el-centre.html */
+@media only screen and (max-width: 1366px) {
+  .big-margin-x {
+    margin-left : 8rem;
+    margin-right: 8rem;
+  }
+
+  .big-margin-y {
+    margin-top   : 6rem;
+    margin-bottom: 6rem;
+  }
+}
 
 @media (max-width: 992px) {
   .intro-text {
@@ -408,23 +417,23 @@ footer {
 
   .home-link {
     margin-left: 1rem;
-    margin-top: 1rem;
-    width: 6em;
-    height: 2em;
+    margin-top : 1rem;
+    width      : 6em;
+    height     : 2em;
   }
 
   .main-nav {
-    padding-top: 0.25em;
+    padding-top   : 0.25em;
     padding-bottom: 0.25em;
   }
 
   .stripe {
-    padding-right: 0.5em;
-    padding-bottom: 0.1em;
-    padding-top: 0.1em;
-    margin-top: 0.1em;
+    padding-right            : 0.5em;
+    padding-bottom           : 0.1em;
+    padding-top              : 0.1em;
+    margin-top               : 0.1em;
     border-bottom-left-radius: 0;
-    transform: translateY(0);
+    transform                : translateY(0);
   }
 
   .stripe::after {
@@ -435,13 +444,14 @@ footer {
   .main-nav-ul {
     margin: 0.8em auto;
   }
+
   .main-nav-li {
     margin: auto;
   }
 
   .main-nav-li:not(:first-child)::before {
-    content: '-';
-    display: block;
+    content   : '-';
+    display   : block;
     text-align: center;
   }
 
@@ -453,18 +463,20 @@ footer {
     flex-wrap: wrap;
   }
 
-  .collab-cliniques-md{
-    display: block;
+  .collab-cliniques-md {
+    display   : block;
     text-align: center;
   }
 
-  .collab-cliniques-md-title{
+  .collab-cliniques-md-title {
     padding: 0.6rem 0;
   }
+
   .collab-cliniques-md-images {
     background-color: white;
-    padding-bottom: 2rem;
+    padding-bottom  : 2rem;
   }
+
   .collab-cliniques-md-images > * {
     padding: 0.8rem 0;
   }
@@ -476,32 +488,30 @@ footer {
 
   /* START Styles el-centre.html */
   .big-margin-x {
-    margin-left: 0;
+    margin-left : 0;
     margin-right: 0;
   }
 
   .big-margin-y {
-    margin-top: 5em;
+    margin-top   : 5em;
     margin-bottom: 5em;
   }
+
   .section-grid {
     /* grid */
-    display: grid;
+    display              : grid;
     grid-template-columns: 100%;
-    grid-template-rows: 8em 350px auto;
-    grid-template-areas:
-      'title'
-      'image'
-      'text';
+    grid-template-rows   : 8em 350px auto;
+    grid-template-areas  : 'title' 'image' 'text';
   }
 
   .section-title {
-    font-size: 3em;
+    font-size    : 3em;
     border-bottom: none;
   }
 
-  .section-title,
-  .section-text {
+  .section-text,
+  .section-title {
     padding-left: 0.25rem;
   }
 
@@ -510,9 +520,9 @@ footer {
   }
 
   .footer-flex-item {
-    width: 50%;
+    width     : 50%;
     text-align: center;
-    margin: 1em auto;
+    margin    : 1em auto;
   }
 
   .footer-flex-item img {
